# xfer-webrtc

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile.build  README.md  build-linux.sh  install.ps1  install.sh
.github/workflows/: release.yml
crates/beam-common/: Cargo.toml
crates/beam-common/src/: lib.rs
crates/beam-common/src/tui/: mod.rs
crates/beam-common/src/ui/: mod.rs
crates/beam-rs/: Cargo.toml
crates/beam-rs/src/iroh/: common.rs
docs/: ARCHITECTURE.md  ROADMAP.md  USE_CASES.md
src/: archive.rs  lib.rs  main.rs  transfer.rs
src/core/: beam.rs  crypto.rs  crypto_test.rs  folder.rs  mod.rs  resume.rs  transfer.rs  xfer.rs
src/crypto/: aes.rs  chunk.rs  ecdh.rs  pin.rs
src/signaling/: crypto.rs  manual.rs  mod.rs  nostr.rs  nostr_protocol.rs  nostr_protocol_test.rs  offline.rs
src/tui/: app.rs  dir_picker.rs  file_browser.rs  mod.rs  transfer_screen.rs
src/ui/: mod.rs
src/webrtc/: common.rs  manual_receiver.rs  manual_sender.rs  mod.rs  nostr_receiver.rs  nostr_sender.rs  offline_receiver.rs  offline_sender.rs  receiver.rs  sender.rs
tests/: transfer_test.rs
