[package]
name = "secure-send-cli"
version = "0.0.9"
edition = "2024"
publish = false

[lib]
name = "secure_send_cli"
path = "src/lib.rs"

[[bin]]
name = "secure-send-cli"
path = "src/main.rs"

[dependencies]
# Core
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
log = "0.4"
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs"] }

# Randomness (nonces, salts, ECDH scalars, PINs)
getrandom = "0.2"

# secure-send-web compatible crypto
aes-gcm = "0.10"
p256 = { version = "0.13", features = ["ecdh"] }
hkdf = "0.12"
pbkdf2 = "0.12"
sha2 = "0.10"

# Manual SS03 signaling payload compression
flate2 = "1"

# Multi-file/folder packaging (secure-send-web zips multiple inputs into one archive)
zip = { version = "8", default-features = false, features = ["deflate-flate2-zlib-rs"] }
tempfile = "3"

# Nostr signaling
nostr-sdk = "0.44.1"

# WebRTC transport
webrtc = "0.17"
bytes = "1"

# CLI (arg parsing + logging)
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"

# TUI wizard
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
futures-util = { version = "0.3", default-features = false }

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
panic = "abort"
