[package]
name = "secure-send-cli"
# does not have to match secure-send-web's npm version
version = "0.0.13"
edition = "2024"
publish = false

[lib]
name = "secure_send_cli"
path = "src/lib.rs"

[[bin]]
name = "secure-send-cli"
path = "src/main.rs"

[dependencies]
# Core
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
log = "0.4"
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs"] }

# Randomness (nonces, salts, ECDH scalars, PINs)
getrandom = "0.2"

# secure-send-web compatible crypto
aes-gcm = "0.10"
p256 = { version = "0.13", features = ["ecdh"] }
hkdf = "0.12"
pbkdf2 = "0.12"
sha2 = "0.10"

# Manual SS03 signaling payload compression
flate2 = "1"

# Multi-file/folder packaging (streamed directly into the transfer)
zip = { version = "8", default-features = false }
# Local-time archive-name timestamps (matches secure-send-web's archiveTimestamp)
chrono = { version = "0.4", default-features = false, features = ["clock"] }

# Nostr signaling
nostr-sdk = "0.44.1"

# WebRTC transport
webrtc = "0.17"
bytes = "1"

# CLI (arg parsing + logging)
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"

# TUI wizard
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
futures-util = { version = "0.3", default-features = false }

[dev-dependencies]
tempfile = "3"

# Patched fork of webrtc-sctp 0.17.1: raises the production pending-queue budget
# from 128 KiB to 1 MiB so a single 131102-byte encrypted chunk cannot deadlock
# the SCTP write loop (CLI↔CLI multi-folder stall). See the fork's commit message.
[patch.crates-io]
webrtc-sctp = { git = "https://github.com/andrewtheguy/webrtc-sctp", branch = "raise-queue-limit" }

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
panic = "abort"
