[package]
name = "beam-common"
version.workspace = true
edition.workspace = true

[features]
nostr = ["dep:nostr-sdk"]
# Inline terminal UI. Optional so transports that don't use it (and downstream
# binaries that opt out) don't pull in ratatui/crossterm.
tui = ["dep:ratatui", "dep:crossterm", "dep:signal-hook"]

[dependencies]
# Core (workspace)
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
nostr-sdk = { workspace = true, optional = true }

# Cryptography
aes-gcm = "0.10"
argon2 = "0.5"
sha2 = "0.10"
spake2 = "0.4"

# File handling
tempfile = { workspace = true }
tokio-util = { workspace = true }
tar = "0.4"
walkdir = "2"
fs4 = "0.12"
xxhash-rust = { version = "0.8", features = ["xxh64"] }

# HTTP client for relay fetching
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }

# CLI (for PIN input)
rustyline = "15"
crc32fast = "1.4"

# Inline TUI (optional, enabled by the `tui` feature)
ratatui = { version = "0.30", optional = true }
crossterm = { version = "0.29", features = ["event-stream"], optional = true }
# Used only on unix (to re-raise SIGINT for graceful cancel), but builds everywhere.
signal-hook = { version = "0.3", optional = true }
